Fixed issue with clouds covering soldiers face

--- a/css/media-query.css
+++ b/css/media-query.css
@@ -2,7 +2,7 @@
 
     .logo{
         width: 379px !important;
-        height: 48px;
+        top: 37px;
     }
     .face{
         transform: scale(0.8);
